# V4-hal

./: .clang-format  .cmake-format.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: hal-api.md  sys-opcodes.md
examples/blink/: CMakeLists.txt  blink.cpp
include/v4/: hal.h  hal.hpp  hal_capabilities.h  hal_error.h  hal_errors.def  hal_types.h  v4_hal.h
ports/esp32/: platform_esp32.cpp  platform_esp32.hpp
ports/posix/: platform_posix.cpp  platform_posix.hpp
src/bridge/: hal_console_bridge.cpp  hal_critical_bridge.cpp  hal_gpio_bridge.cpp  hal_timer_bridge.cpp  hal_uart_bridge.cpp
src/common/: hal_capabilities.cpp  hal_core.cpp  hal_error.cpp
src/internal/: critical_impl.hpp  gpio_impl.hpp  timer_impl.hpp  uart_impl.hpp
tests/: mock_hal.cpp  mock_hal.h  test_hal_cpp.cpp  test_mock_hal.cpp
